--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "title": "Stylish Portfolio",
-  "name": "startbootstrap-stylish-portfolio",
-  "version": "4.0.0-beta.2",
-  "description": "A stylish portfolio HTML template built with Bootstrap",
+  "title": "Portfolio",
+  "name": "dixita0607-portfolio",
+  "version": "1.0.0",
+  "description": "My Portfolio",
   "keywords": [
     "css",
     "sass",
@@ -11,23 +11,17 @@
     "theme",
     "template"
   ],
-  "homepage": "https://startbootstrap.com/template-overviews/stylish-portfolio",
-  "bugs": {
-    "url": "https://github.com/BlackrockDigital/startbootstrap-stylish-portfolio/issues",
-    "email": "feedback@startbootstrap.com"
-  },
+  "homepage": "https://dixita0607.github.io/",
   "license": "MIT",
-  "author": "Start Bootstrap",
-  "contributors": [
-    "David Miller (http://davidmiller.io/)"
-  ],
+  "author": "Dixita Ganatra",
   "repository": {
     "type": "git",
-    "url": "https://github.com/BlackrockDigital/startbootstrap-stylish-portfolio.git"
+    "url": "https://github.com/dixita0607/dixita0607.github.io"
   },
   "dependencies": {
     "bootstrap": "^4.0.0-beta.2",
     "font-awesome": "4.7.0",
+    "gulp-imagemin": "^4.1.0",
     "jquery": "^3.2.1",
     "jquery.easing": "^1.4.1",
     "simple-line-icons": "^2.4.1"
