--- a/package.json
+++ b/package.json
@@ -1,38 +1,25 @@
 {
-  "title": "Portfolio",
-  "name": "dixita0607-portfolio",
-  "version": "1.0.0",
-  "description": "My Portfolio",
-  "keywords": [
-    "css",
-    "sass",
-    "html",
-    "responsive",
-    "theme",
-    "template"
-  ],
-  "homepage": "https://dixita0607.github.io/",
-  "license": "MIT",
-  "author": "Dixita Ganatra",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/dixita0607/dixita0607.github.io"
+  "name": "dixta0607.github.io",
+  "version": "0.0.1",
+  "author": {
+    "email": "dixita0607@gmail.com",
+    "name": "Dixita"
   },
-  "dependencies": {
-    "bootstrap": "^4.0.0-beta.2",
-    "font-awesome": "4.7.0",
-    "gulp-imagemin": "^4.1.0",
-    "jquery": "^3.2.1",
-    "jquery.easing": "^1.4.1",
-    "simple-line-icons": "^2.4.1"
+  "scripts": {
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
+    "start": "sirv public"
   },
   "devDependencies": {
-    "browser-sync": "2.18.13",
-    "gulp": "^3.9.1",
-    "gulp-clean-css": "3.9.0",
-    "gulp-header": "1.8.9",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-uglify": "3.0.0"
+    "@rollup/plugin-commonjs": "11.0.2",
+    "@rollup/plugin-node-resolve": "^7.0.0",
+    "rollup": "^1.20.0",
+    "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-terser": "^5.1.2",
+    "svelte": "^3.0.0"
+  },
+  "dependencies": {
+    "sirv-cli": "^0.4.4"
   }
 }
