--- a/package.json
+++ b/package.json
@@ -1,28 +1,17 @@
 {
-  "name": "dixta0607.github.io",
+  "name": "dixita0607.github.io",
   "version": "0.0.1",
-  "author": {
-    "email": "dixita0607@gmail.com",
-    "name": "Dixita"
-  },
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public"
-  },
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "11.0.2",
-    "@rollup/plugin-node-resolve": "^7.0.0",
-    "font-awesome": "^4.7.0",
-    "postcss-copy-assets": "^0.3.1",
-    "rollup": "^1.20.0",
-    "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-postcss": "^3.1.1",
-    "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.0.0"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
-    "sirv-cli": "^0.4.4"
+    "@types/node": "^14.14.19",
+    "@types/react": "^17.0.0",
+    "next": "^10.0.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "typescript": "^4.1.3"
   }
 }
